styles: fix order on mobile

--- a/src/classic-page.scss
+++ b/src/classic-page.scss
@@ -28,6 +28,7 @@ section {
       flex-direction: column;
       gap: 1rem;
       margin: 0 auto;
+      order: 2;
     }
     @media screen and (min-width: 850px) {
       display: grid;
@@ -52,6 +53,7 @@ section {
       figcaption {
         padding-right: 0;
         padding-left: 0;
+        order: unset;
       }
       img,
       picture {
